crates/diffo-ui/src/file_picker/snapshots/diffo_ui__file_picker__tests__context_menu_renders_spacing_and_shortcuts.snap
---
source: crates/diffo-ui/src/file_picker/tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 8 },
    content: [
        "┌ Files ───────────┐          ",
        "│f┌ Path [c] ───────────┐    ",
        "│ │[a] Copy absolute path│    ",
        "│ │                      │    ",
        "└─│[r] Copy relative path│    ",
        "  └──────────────────────┘    ",
        "                              ",
        "                              ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: DarkGray, underline: Reset, modifier: BOLD,
        x: 2, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 1, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 1, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 25, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
