crates/diffo-ui/src/file_picker/snapshots/diffo_ui__file_picker__tests__flat_panel_action.snap
---
source: crates/diffo-ui/src/file_picker/tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 4 },
    content: [
        "┌ Changes [+] Stage All ─────┐",
        "│No files.                   │",
        "│                            │",
        "└────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 0, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
