crates/diffo-ui/src/file_picker/snapshots/diffo_ui__file_picker__tests__flat_rows_start_with_their_label_without_a_dot.snap
---
source: crates/diffo-ui/src/file_picker/tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 4 },
    content: [
        "┌ Files ───────────┐",
        "│file-0            │",
        "│                  │",
        "└──────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
