crates/diffo-ui/src/file_picker/snapshots/diffo_ui__file_picker__tests__styled_selected_row.snap
---
source: crates/diffo-ui/src/file_picker/tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 4 },
    content: [
        "┌ Files ─────────────────────┐",
        "│D deleted.txt            [+]│",
        "│                            │",
        "└────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: LightRed, bg: DarkGray, underline: Reset, modifier: BOLD | CROSSED_OUT,
        x: 26, y: 1, fg: White, bg: DarkGray, underline: Reset, modifier: BOLD | CROSSED_OUT,
        x: 29, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
