crates/diffo-ui/src/file_picker/snapshots/diffo_ui__file_picker__tests__tree_panel_actions.snap
---
source: crates/diffo-ui/src/file_picker/tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 4 },
    content: [
        "┌ Explorer ───────────     ┐",
        "│No files.                   │",
        "│                            │",
        "└────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 22, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 29, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
    ]
}
